[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/Battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://UI/Images/Dungeon.png" type="Texture" id=2]
[ext_resource path="res://UI/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://Objects/Player/PlayerPanel.gd" type="Script" id=4]
[ext_resource path="res://Objects/Player/Images/stand.png" type="Texture" id=5]
[ext_resource path="res://Objects/Player/Images/hurt.png" type="Texture" id=6]
[ext_resource path="res://Objects/Player/PlayerStats.gd" type="Script" id=7]
[ext_resource path="res://Objects/Skills/SkillButton.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.721569, 0.690196, 0.690196, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 25, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 50, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 75, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 100, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 125, 0, 25, 25 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "hurt",
"speed": 10.0
} ]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="ButtonGroup" id=3]
resource_name = "skills"

[sub_resource type="Animation" id=1]
resource_name = "FadeToNewRoom"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Battle" type="Node"]
script = ExtResource( 1 )

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 2 )

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 46, 29 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="UI"]
margin_right = 90.0
margin_bottom = 47.0
mouse_filter = 2

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
visible = false
margin_left = 10.0
margin_top = 17.0
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 13 )
text = "ENTER NEXT ROOM"

[node name="PlayerPanel" type="Panel" parent="UI"]
margin_left = 3.0
margin_top = 52.0
margin_right = 87.0
margin_bottom = 73.0
script = ExtResource( 4 )

[node name="HPBar" type="ProgressBar" parent="UI/PlayerPanel"]
margin_left = 26.0
margin_top = 3.0
margin_right = 81.0
margin_bottom = 10.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 10.0
step = 1.0
value = 10.0
percent_visible = false

[node name="HP" type="Label" parent="UI/PlayerPanel"]
margin_left = 39.0
margin_right = 72.0
margin_bottom = 12.0
size_flags_horizontal = 3
text = "10"
align = 1

[node name="AP" type="Label" parent="UI/PlayerPanel"]
margin_left = 22.0
margin_top = 9.0
margin_right = 55.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "AP: 99"
align = 1

[node name="Sprite" type="AnimatedSprite" parent="UI/PlayerPanel"]
position = Vector2( 13, 10 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 7 )
animation = "stand"
playing = true

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_top = 135.0
margin_right = 90.0
margin_bottom = 160.0

[node name="Textbox" type="RichTextLabel" parent="UI/TextboxPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 91.0
margin_bottom = 24.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_constants/line_separation = 2
custom_styles/normal = SubResource( 2 )
text = "Here is a test
So we can see how it
looks"
scroll_active = false

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 3.0
margin_top = 78.0
margin_right = 89.0
margin_bottom = 131.0
custom_constants/vseparation = 3
custom_constants/hseparation = 4
columns = 2

[node name="Slash" type="Button" parent="UI/BattleActionButtons"]
margin_right = 40.0
margin_bottom = 11.0
rect_min_size = Vector2( 40, 11 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "SLASH"
script = ExtResource( 8 )

[node name="Cross" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 11.0
rect_min_size = Vector2( 40, 11 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "CROSS"
script = ExtResource( 8 )

[node name="Triple" type="Button" parent="UI/BattleActionButtons"]
margin_top = 14.0
margin_right = 40.0
margin_bottom = 25.0
rect_min_size = Vector2( 40, 11 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "TRIPLE"
script = ExtResource( 8 )

[node name="Combo" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_top = 14.0
margin_right = 84.0
margin_bottom = 25.0
rect_min_size = Vector2( 40, 11 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "COMBO"
script = ExtResource( 8 )

[node name="Combo2" type="Button" parent="UI/BattleActionButtons"]
margin_top = 28.0
margin_right = 40.0
margin_bottom = 39.0
rect_min_size = Vector2( 40, 11 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "COMBO"
script = ExtResource( 8 )

[node name="Combo3" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_top = 28.0
margin_right = 84.0
margin_bottom = 39.0
rect_min_size = Vector2( 40, 11 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "COMBO"
script = ExtResource( 8 )

[node name="Combo4" type="Button" parent="UI/BattleActionButtons"]
margin_top = 42.0
margin_right = 40.0
margin_bottom = 53.0
rect_min_size = Vector2( 40, 11 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "COMBO"
script = ExtResource( 8 )

[node name="Combo5" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_top = 42.0
margin_right = 84.0
margin_bottom = 53.0
rect_min_size = Vector2( 40, 11 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "COMBO"
script = ExtResource( 8 )

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeToNewRoom = SubResource( 1 )

[connection signal="ap_changed" from="PlayerStats" to="UI/PlayerPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/PlayerPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
[connection signal="toggled" from="UI/BattleActionButtons/Slash" to="UI/BattleActionButtons/Slash" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/Cross" to="UI/BattleActionButtons/Cross" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/Triple" to="UI/BattleActionButtons/Triple" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/Combo" to="UI/BattleActionButtons/Combo" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/Combo2" to="UI/BattleActionButtons/Combo2" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/Combo3" to="UI/BattleActionButtons/Combo3" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/Combo4" to="UI/BattleActionButtons/Combo4" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/Combo5" to="UI/BattleActionButtons/Combo5" method="_on_toggled"]
